--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <!--<link rel="shortcut icon" href="favicon.ico" />-->
   <!--<link rel="bookmark" href="favicon.ico" />-->
   <script src="//unpkg.com/vue-ydui/dist/ydui.flexible.js"></script>
+  <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
 </head>
 <body>
 <div id="app"></div>
